--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,15 +6,18 @@ version: 1.0.0+1
 
 environment:
   sdk: ">=2.15.1 <3.0.0"
-  flutter: ">= 2.10.0"
+  flutter: ">=2.10.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
-  provider: ^6.0.2
   http: ^0.13.4
   shared_preferences: ^2.0.13
+  flutter_riverpod: ^1.0.3
+  go_router: ^3.0.3
+  flutter_svg: ^1.0.3
+  email_validator: ^2.0.1
 
 dev_dependencies:
   flutter_test:
@@ -22,3 +25,5 @@ dev_dependencies:
   flutter_lints: ^1.0.0
 flutter:
   uses-material-design: true
+  assets:
+    - assets/logo.png
