--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   go_router: ^3.0.3
   flutter_svg: ^1.0.3
   email_validator: ^2.0.1
+  charts_flutter: ^0.12.0
 
 dev_dependencies:
   flutter_test:
