--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.4
   shared_preferences: ^2.0.13
-  flutter_riverpod: ^1.0.3
+  provider: ^6.0.2
   go_router: ^3.0.3
   flutter_svg: ^1.0.3
   email_validator: ^2.0.1
