--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   payload:
     git: https://github.com/rvms-capstone/payload.git
   charts_flutter: ^0.12.0
+  get_it: ^7.2.0
+  permission_handler: ^9.2.0
 
 dev_dependencies:
   flutter_test:
